:tada: First Commit

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,61 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700;800;900&display=swap");
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  position: relative;
+  z-index: -100;
+  background-color: #ecfdf5;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+main {
+  position: relative;
+  z-index: -50;
+  background-color: #ecfdf5;
+}
+
+::placeholder {
+  color: #ecfdf5 !important;
+}
+
+@layer components {
+  h1 {
+    @apply text-3xl font-extrabold text-dark sm:text-4xl lg:text-5xl xl:text-6xl;
+  }
+  h2 {
+    @apply text-2xl font-extrabold sm:text-3xl xl:text-4xl;
+  }
+  h3 {
+    @apply text-xl font-extrabold sm:text-3xl xl:text-4xl;
+  }
+  h4 {
+    @apply text-lg font-semibold sm:text-xl xl:text-2xl;
+  }
+
+  h5 {
+    @apply text-sm text-green-dark font-normal md:text-lg xl:text-xl;
+  }
+  p {
+    @apply text-xs font-normal md:text-base xl:text-lg;
+  }
+  b {
+    @apply font-semibold;
+  }
+  input {
+    @apply w-full text-light font-normal bg-transparent appearance-none rounded px-2 py-3 mt-1 mb-3 text-xs border border-dashed border-green-light leading-tight focus:outline-none focus:shadow-none lg:text-lg lg:px-3 lg:py-7;
+  }
+
+  button {
+    @apply text-light font-normal text-xs sm:text-sm rounded lg:text-base;
+  }
 }
